<resources>
    <string name="app_name" translatable="false">Уголёк</string>
    <string name="Provider" translatable="false">Провайдер</string>
    <string name="arschanovr" translatable="false">Аршановский разрез</string>
    <string name="cirbinskiy" translatable="false">Кирбинский разрез</string>
    <string name="chernogorskiy" translatable="false">Черногорский разрез</string>
    <string name="izyhskiy" translatable="false">Изыхский разрез</string>

    <string name="dmsch" translatable="false">ДМСШ 0–25</string>
    <string name="do25" translatable="false">ДО 25–50</string>
    <string name="dpk" translatable="false">ДПК 50–200</string>
    <string name="dp" translatable="false">ДР 0–300</string>


    <string name="contraintfortxtnum" translatable="false">"1","2","3","4"
        ,"5","6","7","8","9","10","11","12","13","14","15","16","17","18","19",
        "20","21","22","23","24","25","26","27","28","29","30","31","32","33",
        "34","35","36","37","38","39","40",""</string>

    <string name="loginApiSms">lflagmanl</string>
    <string name="passwordApiSms">eujkmkexitdct[!</string>

    <string name="todo" translatable="false">TODO</string>
    <string name="Coal" translatable="false">Уголь</string>
    <string name="TitleDialog" translatable="false">Выберите поставшика</string>
    <string name="Fire" translatable="false">Принять</string>
    <string name="forFieldConfirm" translatable="false">Значение</string>
    <string name="Cancel" translatable="false">Отменить</string>
    <string name="_1_40" translatable="false">1-40 тонн</string>
    <string name="enteredOrderFields">Введённые поля заказа</string>
    <string name="addressDelivery">Адрес доставки</string>
    <string name="provider">Поставщик</string>
    <string name="priceDelivery">Стоимость доставки</string>
    <string name="totalAmount">Общая стоимость</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_accept">Подтвердить</string>
    <string name="text_chooseProvider">Выберите поставщика</string>
    <string name="chooseMark">Выберите марку угля</string>
    <string name="requiredMass">Требуемая масса</string>
    <string name="priceCoal">Стоимость тонны</string>
    <string name="markCoal">Марка угля</string>
    <string name="txt_Provider">Поставщик</string>
    <string name="enteredFieldsOnOrder">Введённые поля заказа</string>
    <string name="confirm">Подтвердить</string>
    <string name="phone">Телефон</string>
    <string name="phoneOfDeveloper">+7(923)398-75-19</string>
    <string name="commonPrice">Общая стоимость</string>
    <string name="distance">Расстояние доставки</string>
    <string name="toOrder">Заказать</string>
    <string name="address">Регион, Город, улица, дом</string>
    <string name="chooseOnMap">Выбрать на карте</string>
    <string name="chooseAddress">Введите адрес</string>
    <string name="distanceBetween">Расстояние между поставщиком и выбранным адресом:</string>
    <string name="enterAddress">Введите адрес</string>
    <string name="header">Оформление заказа</string>
    <string name="delivery">Доставка</string>
    <string name="distanceLocation">Расстояние</string>
    <string name="searchAddress">Поиск адреса</string>
    <string name="helpersMaps">Выберите адрес доставки нажатием на карту</string>
    <string name="inputsAddress">Выбранный адрес:</string>
    <string name="symbol_check"></string>
    <string name="symbol_cancel"></string>
    <string name="symbol_pen_write"></string>
    <string name="symbol_not_equal"></string>
    <string name="symbol_bug"></string>
</resources>