<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListContainersMark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewMrkLt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="50dp"
        android:layout_margin="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/containerMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/dialog_page_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_chooseMark"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/chooseMark"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dmsch_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_dialog_background"
                android:fontFamily="@font/russian_road"
                android:paddingHorizontal="15dp"
                android:text="@string/dmsch"
                android:textColor="?colorOnSecondary"
                android:textSize="18sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_do_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_dialog_background"
                android:fontFamily="@font/russian_road"
                android:paddingHorizontal="15dp"
                android:text="@string/do25"
                android:textColor="?colorOnSecondary"
                android:textSize="18sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dpk_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_dialog_background"
                android:fontFamily="@font/russian_road"
                android:paddingHorizontal="15dp"
                android:text="@string/dpk"
                android:textColor="?colorOnSecondary"
                android:textSize="18sp">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dp_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_dialog_background"
                android:fontFamily="@font/russian_road"
                android:paddingHorizontal="15dp"
                android:text="@string/dp"
                android:textColor="?colorOnSecondary"
                android:textSize="18sp">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>