<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListContainers"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewPrLt"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="50dp"
        android:layout_margin="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/dialog_page_background">

            <TextView
                android:id="@+id/text_chooseProvider"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/text_chooseProvider"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_chernogorsk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <!-- Здесь кнопка для Черногорского разреза-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_chernogorsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_dialog_background"
                android:fontFamily="@font/russian_road"
                android:paddingHorizontal="15dp"
                android:text="@string/chernogorskiy"
                android:textAllCaps="false"
                android:textColor="?colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_arschanov"
                app:layout_constraintEnd_toEndOf="@+id/container"
                app:layout_constraintStart_toStartOf="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/text_chooseProvider"
                app:layout_constraintVertical_bias="0.0">

            </androidx.appcompat.widget.AppCompatButton>

            <!-- Здесь кнопка для Аршановского разреза-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_arschanov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_dialog_background"
                android:fontFamily="@font/russian_road"
                android:paddingHorizontal="15dp"
                android:text="@string/arschanovr"
                android:textAllCaps="false"
                android:textColor="?colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_izyskhiy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_chernogorsk">

            </androidx.appcompat.widget.AppCompatButton>

            <!-- Здесь кнопка для Изыхского разреза-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_izyskhiy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_dialog_background"
                android:fontFamily="@font/russian_road"
                android:paddingHorizontal="15dp"
                android:text="@string/izyhskiy"
                android:textAllCaps="false"
                android:textColor="?colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cirbinsciy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_arschanov">

            </androidx.appcompat.widget.AppCompatButton>

            <!-- Здесь кнопка для Кирбинского разреза-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cirbinsciy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_dialog_background"
                android:fontFamily="@font/russian_road"
                android:paddingHorizontal="15dp"
                android:text="@string/cirbinskiy"
                android:textAllCaps="false"
                android:textColor="?colorOnSecondary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_izyskhiy">

            </androidx.appcompat.widget.AppCompatButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>