<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container_maps_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintMaps"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:background="@null"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputAddressMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@drawable/field_background"
            android:drawableStart="@drawable/loopa"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/searchAddress"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="?colorOnSecondary">

        </androidx.appcompat.widget.AppCompatEditText>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/progress_maps_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="80dp"
        android:elevation="8dp"
        android:background="@drawable/progress_bar_background"
        app:layout_constraintBottom_toTopOf="@+id/CardViewInputsAddress"
        app:layout_constraintStart_toStartOf="@+id/CardViewInputsAddress"
        app:layout_constraintEnd_toEndOf="@+id/CardViewInputsAddress">

        <ProgressBar
            android:id="@+id/progressBarMaps"
            android:layout_margin="10dp"
            style="?android:attr/progressBarStyle"
            android:elevation="8dp"
            android:layout_width="35dp"
            android:layout_height="35dp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewInputsAddress"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_page_background"
            android:elevation="1dp">

            <TextView
                android:id="@+id/text_chosenAddress"
                style="@style/textStyle"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/inputsAddress"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/fieldChosenAddress"
                app:layout_constraintEnd_toEndOf="@+id/fieldChosenAddress"
                app:layout_constraintStart_toStartOf="@id/fieldChosenAddress"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fieldChosenAddress"
                style="@style/textFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/field_background"
                android:editable="false"
                android:elevation="3dp"
                android:hint="@string/helpersMaps"
                android:padding="13dp"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/btn_acceptAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_chosenAddress" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_acceptAddress"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:background="@drawable/btn_background"
                android:elevation="3dp"
                android:fontFamily="@font/txt_solid"
                android:text="@string/symbol_check"
                android:textColor="?colorOnSecondary"
                android:textSize="17sp"
                android:translationZ="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fieldChosenAddress">

            </androidx.appcompat.widget.AppCompatButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/CardViewInputsAddress"
        app:layout_constraintEnd_toEndOf="parent">

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/btn_acceptAddress"-->
        <!--            android:layout_width="60dp"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:background="@drawable/bg_btn_accept"-->
        <!--            android:layout_marginBottom="20dp"-->
        <!--            android:fontFamily="@font/txt_solid"-->
        <!--            android:text=""-->
        <!--            android:textSize="24sp"-->
        <!--            >-->
        <!--        </androidx.appcompat.widget.AppCompatButton>-->


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_calculateAddress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/field_background"
            android:fontFamily="@font/txt_solid"
            android:text=""
            android:textColor="?colorAccent"
            android:textSize="26sp" />


        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/btn_cancelAddress"-->
        <!--            android:layout_width="60dp"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:background="@drawable/bg_btn_cancel"-->
        <!--            android:fontFamily="@font/txt_solid"-->
        <!--            android:text=""-->
        <!--            android:textSize="26sp"-->
        <!--            >-->
        <!--        </androidx.appcompat.widget.AppCompatButton>-->

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
